# Cloudberries

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  wait_for_db.py
alembic/versions/: 3fd2bba386fa_init.py
core_service/: Dockerfile
core_service/alembic/: env.py
core_service/alembic/versions/: 1b84db9cf066_add_chat_session.py
core_service/src/: admin.py  chat_engine.py  main.py
core_service/src/chat/: llm.py  router.py  schemas.py  service.py
core_service/src/db/: models.py
core_service/src/search/: embeddings.py  keyword_search.py
front_service/: index.html  package-lock.json  package.json
front_service/src/: App.tsx  api.ts  index.css
front_service/src/components/ui/: button.tsx  card.tsx  input.tsx  skeleton.tsx  textarea.tsx
front_service/static/: index.html
scraper_service/: .env.example  Dockerfile  README.md  parse_prices.py  process_json_to_db.py  pyproject.toml
scraper_service/src/scraper_service/: celery_app.py  config.py  models.py  worker.py
scraper_service/src/scraper_service/tasks/: json_to_db.py  md_to_json.py  parse_direct_pdfs.py  pdf_to_md.py  pipeline.py
src/: admin.py  chat_engine.py  config.py  main.py  parse_cloud_ru.py
src/chat/: llm.py  matcher.py  router.py  schemas.py  service.py
src/db/: engine.py  models.py
src/search/: bm25.py  hybrid.py  keyword_search.py  qdrant_client.py
static/: index.html
