[project]
name = "cloudberries"
version = "0.1.0"
description = "Cloud provider comparison service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
]
