[project]
name = "scraper-service"
version = "0.1.0"
description = "Scraper service with Celery for cloud pricing parsing"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.13.0",
    "requests>=2.32.0",
    "openai>=1.59.0",
    "aiohttp>=3.11.0",
]